Update to new API style generated with Api Builder r481